fix(pw.2022): better on small scren

--- a/paris-web.2022/css/ddeecckk.css
+++ b/paris-web.2022/css/ddeecckk.css
@@ -71,6 +71,7 @@ body {
   display: grid;
   font: normal 400 1rem/1.5 sans-serif;
   font-family: "museo-slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Segoe UI Emoji","Segoe UI Symbol";
+  grid-template-columns: minmax(0, 1fr);
   grid-template-rows:  3rem 1fr 4rem;
   margin: 0 auto;
   max-width: 120ch;
@@ -100,6 +101,7 @@ textarea,
 select {
   border-style: solid;
   font: inherit;
+  max-width: 100%;
 }
 
 :focus {
@@ -248,6 +250,7 @@ footer li {
 main {
   counter-reset: slides;
   display: grid;
+  grid-template-columns: inherit;
 }
 
 section {
@@ -255,51 +258,9 @@ section {
   border: 1px solid rgba(0, 0, 0, .1);
   border-radius: .5rem;
   counter-increment: slides;
-  padding: 2rem;
+  padding: 1rem;
   position: relative;
 }
-
-@media screen and (min-width: 120ch) {
-  main {
-    grid-auto-flow: column;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-  }
-
-  section {
-    width: 120ch;
-    height: 100%;
-    margin: auto;
-    max-height: 67vh;
-    scroll-snap-align: center;
-    scroll-snap-stop: always;
-  }
-
-  .demo {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr;
-    padding: 0;
-  }
-
-  .demo > :first-child {
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
-    grid-column: span 2;
-    margin: 1rem 1rem 0;
-    padding-bottom: 1rem;
-  }
-}
-
-@media (max-width: 120ch) {
-  section {
-    min-height: 80vh;
-  }
-
-  section + section {
-    border-top: 1px dashed;
-  }
-}
-
 
 /* Content */
 h1 {
@@ -308,7 +269,7 @@ h1 {
 }
 
 h2, .h2 {
-  font: 300 2.4rem/1.1 "bello-pro";
+  font: 300 2rem/1.1 "bello-pro";
 }
 
 h3,
@@ -338,7 +299,7 @@ section [hreflang="en"]::after {
 }
 
 section :is(p, ul, ol) {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 300;
 }
 
@@ -379,19 +340,21 @@ section::before {
   background-color: #032c36;
   border-radius: 0 0 0 .5rem;
   display: grid;
-  font-size: 1.35rem;
+  font-size: 1rem;
   overflow-y: hidden;
   resize: horizontal;
 }
 
 .markup {
-  border-right: 1px solid rgba(0, 0, 0, .1);
-  margin-right: 1rem;
-  padding-right: 1rem;
+  border-color: rgba(0, 0, 0, .1);
+  border-style: solid;
+  border-width: 0 0 1px 0;
+  margin: 0 0 1rem;
+  padding: 0 0 1rem;
 }
 
 .lead {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 700;
 }
 
@@ -435,7 +398,7 @@ output {
 
 .playground table {
   border-collapse: collapse;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   text-align: left;
   width: 100%;
 }
@@ -472,4 +435,70 @@ output {
 .w-100 { width: 100%; }
 
 [class^="grid"] { display: grid; }
-.grid-1-2 { grid-template-columns: 1fr 2fr; }
+
+/* Responsive */
+@media (max-width: 120ch) {
+  section {
+    min-height: 80vh;
+  }
+
+  section + section {
+    border-top: 1px dashed;
+  }
+}
+
+@media screen and (min-width: 120ch) {
+  main {
+    grid-auto-flow: column;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+  }
+
+  section {
+    width: 120ch;
+    height: 100%;
+    margin: auto;
+    max-height: 67vh;
+    padding: 2rem;
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+  }
+
+  .demo {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr;
+    padding: 0;
+  }
+
+  .demo > :first-child {
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    grid-column: span 2;
+    margin: 1rem 1rem 0;
+    padding-bottom: 1rem;
+  }
+
+  .style {
+    font-size: 1.35rem;
+  }
+
+  .markup {
+    border-width: 0 1px 0 0;
+    margin: 0 1rem 0 0;
+    padding: 0 1rem 0 0;
+  }
+
+  h2, .h2 {
+    font-size: 2.4rem;
+  }
+
+  section :is(p, ul, ol),
+  .lead,
+  .playground table {
+    font-size: 1.5rem;
+  }
+
+  .grid-1-2 {
+    grid-template-columns: 1fr 2fr;
+  }
+}
